--- a/Keyboards/KeyboardsBase/Keyboard.xib
+++ b/Keyboards/KeyboardsBase/Keyboard.xib
@@ -89,25 +89,25 @@
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JUl-T5-Lgg" userLabel="ConjTLLbl">
-                    <rect key="frame" x="36" y="51.5" width="122.5" height="15"/>
+                    <rect key="frame" x="36" y="51.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0yf-Ey-fhO" userLabel="ConjBLLbl">
-                    <rect key="frame" x="161.5" y="51.5" width="122.5" height="15"/>
+                    <rect key="frame" x="161.5" y="51.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92Z-QS-QCN" userLabel="ConjTRLbl">
-                    <rect key="frame" x="36" y="155.5" width="122.5" height="15"/>
+                    <rect key="frame" x="36" y="155.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I6c-Dk-kl5" userLabel="ConjBRLbl">
-                    <rect key="frame" x="161.5" y="155.5" width="122.5" height="15"/>
+                    <rect key="frame" x="161.5" y="155.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
@@ -149,37 +149,37 @@
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zF-Cw-FHM" userLabel="FPSLbl">
-                    <rect key="frame" x="36" y="51.5" width="122.5" height="15"/>
+                    <rect key="frame" x="36" y="51.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgD-l0-Jm1" userLabel="SPSLbl">
-                    <rect key="frame" x="36" y="120.5" width="122.5" height="15"/>
+                    <rect key="frame" x="36" y="120.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eBL-dH-9NG" userLabel="TPSLbl">
-                    <rect key="frame" x="36" y="190" width="122.5" height="15"/>
+                    <rect key="frame" x="36" y="190" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cle-tW-yE1" userLabel="FPPLbl">
-                    <rect key="frame" x="161.5" y="51.5" width="122.5" height="15"/>
+                    <rect key="frame" x="161.5" y="51.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jkU-RQ-53C" userLabel="SPPLbl">
-                    <rect key="frame" x="161.5" y="120.5" width="122.5" height="15"/>
+                    <rect key="frame" x="161.5" y="120.5" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDi-9w-xbx" userLabel="TPPLbl">
-                    <rect key="frame" x="161.5" y="190" width="122.5" height="15"/>
+                    <rect key="frame" x="161.5" y="190" width="122.5" height="20"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
@@ -237,7 +237,6 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemGray4Color"/>
             <constraints>
-                <constraint firstItem="cgD-l0-Jm1" firstAttribute="height" secondItem="18n-dD-Eou" secondAttribute="height" multiplier="0.222222" id="0HA-Ku-ekF"/>
                 <constraint firstItem="8zF-Cw-FHM" firstAttribute="height" secondItem="cle-tW-yE1" secondAttribute="height" id="0HL-yc-9Om"/>
                 <constraint firstItem="xYB-wV-ziM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="3" id="0Yc-gH-7mM"/>
                 <constraint firstItem="mDi-9w-xbx" firstAttribute="top" secondItem="rFZ-XE-qHq" secondAttribute="top" id="1BX-gb-mHH"/>
@@ -272,13 +271,13 @@
                 <constraint firstItem="eBL-dH-9NG" firstAttribute="top" secondItem="kON-8k-vtV" secondAttribute="top" id="Bkv-kp-DM6"/>
                 <constraint firstItem="92Z-QS-QCN" firstAttribute="top" secondItem="dOA-cy-aGo" secondAttribute="top" id="DEN-J7-G2A"/>
                 <constraint firstItem="jkU-RQ-53C" firstAttribute="leading" secondItem="gnL-wZ-ogY" secondAttribute="leading" id="DTe-Ym-JXE"/>
-                <constraint firstItem="92Z-QS-QCN" firstAttribute="height" secondItem="dOA-cy-aGo" secondAttribute="height" multiplier="0.147783" id="DgU-eZ-adg"/>
                 <constraint firstItem="MCB-7F-dNd" firstAttribute="height" secondItem="FgS-T1-2rI" secondAttribute="height" id="DmI-W0-vix"/>
                 <constraint firstItem="KbB-Q5-JYD" firstAttribute="top" secondItem="Yr3-T8-7HB" secondAttribute="top" id="E0Z-EZ-tTS"/>
                 <constraint firstItem="8zF-Cw-FHM" firstAttribute="leading" secondItem="rO5-ij-Hyw" secondAttribute="leading" id="EcC-PM-VwZ"/>
                 <constraint firstItem="MCB-7F-dNd" firstAttribute="height" secondItem="9j4-80-zkW" secondAttribute="height" id="F1Z-rx-yPZ"/>
                 <constraint firstItem="18n-dD-Eou" firstAttribute="height" secondItem="kON-8k-vtV" secondAttribute="height" id="FOp-Th-Wz3"/>
                 <constraint firstItem="rO5-ij-Hyw" firstAttribute="bottom" secondItem="0Sz-72-xUw" secondAttribute="bottom" id="FcE-Uy-xIg"/>
+                <constraint firstItem="92Z-QS-QCN" firstAttribute="height" secondItem="dOA-cy-aGo" secondAttribute="height" multiplier="0.197044" id="GqL-pb-lx8"/>
                 <constraint firstItem="FgS-T1-2rI" firstAttribute="leading" secondItem="rP7-7a-des" secondAttribute="trailing" constant="3" id="HSf-WM-nWC"/>
                 <constraint firstItem="lVo-8I-Rya" firstAttribute="top" secondItem="OeW-Ji-4P7" secondAttribute="bottom" id="Hk8-Wy-FTc"/>
                 <constraint firstItem="JUl-T5-Lgg" firstAttribute="width" secondItem="KbB-Q5-JYD" secondAttribute="width" id="HsY-UD-MBK"/>
@@ -289,6 +288,7 @@
                 <constraint firstItem="kON-8k-vtV" firstAttribute="trailing" secondItem="18n-dD-Eou" secondAttribute="trailing" id="JkA-mH-AVz"/>
                 <constraint firstItem="X69-uD-USO" firstAttribute="trailing" secondItem="myP-Mh-fDn" secondAttribute="trailing" id="K3f-Ou-VeB"/>
                 <constraint firstItem="KbB-Q5-JYD" firstAttribute="centerX" secondItem="rO5-ij-Hyw" secondAttribute="centerX" id="K8t-nd-W7f"/>
+                <constraint firstItem="JUl-T5-Lgg" firstAttribute="height" secondItem="KbB-Q5-JYD" secondAttribute="height" multiplier="0.19802" id="Law-6Y-2Qo"/>
                 <constraint firstItem="8zF-Cw-FHM" firstAttribute="top" secondItem="rO5-ij-Hyw" secondAttribute="top" id="LdN-rj-v0b"/>
                 <constraint firstItem="18n-dD-Eou" firstAttribute="top" secondItem="rO5-ij-Hyw" secondAttribute="bottom" constant="2" id="Li3-C7-2ZW"/>
                 <constraint firstItem="I6c-Dk-kl5" firstAttribute="width" secondItem="myP-Mh-fDn" secondAttribute="width" id="M8L-I3-FNr"/>
@@ -303,6 +303,7 @@
                 <constraint firstItem="rP7-7a-des" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="3" id="QHX-El-bN7"/>
                 <constraint firstAttribute="bottom" secondItem="Yr3-T8-7HB" secondAttribute="bottom" id="QQB-oe-BPi"/>
                 <constraint firstItem="KbB-Q5-JYD" firstAttribute="leading" secondItem="dOA-cy-aGo" secondAttribute="leading" id="RNE-46-rYE"/>
+                <constraint firstItem="cgD-l0-Jm1" firstAttribute="height" secondItem="18n-dD-Eou" secondAttribute="height" multiplier="0.296296" id="RcC-aj-x4I"/>
                 <constraint firstItem="xYB-wV-ziM" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-3" id="Rfm-bW-pyV"/>
                 <constraint firstItem="xYB-wV-ziM" firstAttribute="top" secondItem="IR7-Kd-kHd" secondAttribute="bottom" constant="3" id="SAs-So-Trz"/>
                 <constraint firstItem="rO5-ij-Hyw" firstAttribute="leading" secondItem="Yr3-T8-7HB" secondAttribute="trailing" constant="3" id="TYg-Oa-AXJ"/>
@@ -319,6 +320,7 @@
                 <constraint firstItem="9j4-80-zkW" firstAttribute="width" secondItem="FgS-T1-2rI" secondAttribute="width" id="aRK-Sb-1Bo"/>
                 <constraint firstItem="gnL-wZ-ogY" firstAttribute="top" secondItem="18n-dD-Eou" secondAttribute="top" id="ara-UL-eBH"/>
                 <constraint firstItem="92Z-QS-QCN" firstAttribute="height" secondItem="I6c-Dk-kl5" secondAttribute="height" id="c6J-fz-kW9"/>
+                <constraint firstItem="eBL-dH-9NG" firstAttribute="height" secondItem="kON-8k-vtV" secondAttribute="height" multiplier="0.298507" id="cWB-uY-rqf"/>
                 <constraint firstItem="OeW-Ji-4P7" firstAttribute="top" secondItem="xYB-wV-ziM" secondAttribute="bottom" id="crm-X6-jkA"/>
                 <constraint firstItem="Yr3-T8-7HB" firstAttribute="top" secondItem="MCB-7F-dNd" secondAttribute="bottom" constant="3" id="d1i-JR-4YK"/>
                 <constraint firstItem="kON-8k-vtV" firstAttribute="leading" secondItem="Yr3-T8-7HB" secondAttribute="trailing" constant="3" id="d9t-KS-vZ9"/>
@@ -326,7 +328,7 @@
                 <constraint firstItem="MCB-7F-dNd" firstAttribute="height" secondItem="IR7-Kd-kHd" secondAttribute="height" id="ekl-0b-05a"/>
                 <constraint firstItem="cle-tW-yE1" firstAttribute="top" secondItem="0Sz-72-xUw" secondAttribute="top" id="feM-S2-Baq"/>
                 <constraint firstItem="9j4-80-zkW" firstAttribute="height" secondItem="FgS-T1-2rI" secondAttribute="height" id="fso-ew-dYc"/>
-                <constraint firstItem="8zF-Cw-FHM" firstAttribute="height" secondItem="rO5-ij-Hyw" secondAttribute="height" multiplier="0.223881" id="ft0-qS-hlf"/>
+                <constraint firstItem="8zF-Cw-FHM" firstAttribute="height" secondItem="rO5-ij-Hyw" secondAttribute="height" multiplier="0.298507" id="gej-ep-obL"/>
                 <constraint firstItem="rFZ-XE-qHq" firstAttribute="leading" secondItem="kON-8k-vtV" secondAttribute="trailing" constant="3" id="h3j-lF-Thr"/>
                 <constraint firstItem="mDi-9w-xbx" firstAttribute="width" secondItem="rFZ-XE-qHq" secondAttribute="width" id="hMY-Vq-INV"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="epX-eh-uqd" secondAttribute="trailing" constant="3" id="hOn-Fl-Wib"/>
@@ -338,7 +340,6 @@
                 <constraint firstItem="18n-dD-Eou" firstAttribute="leading" secondItem="Yr3-T8-7HB" secondAttribute="trailing" constant="3" id="jrB-5w-3V2"/>
                 <constraint firstItem="xYB-wV-ziM" firstAttribute="top" secondItem="MCB-7F-dNd" secondAttribute="bottom" constant="3" id="k6J-4G-j1E"/>
                 <constraint firstItem="0yf-Ey-fhO" firstAttribute="width" secondItem="X69-uD-USO" secondAttribute="width" id="lNP-SD-cav"/>
-                <constraint firstItem="eBL-dH-9NG" firstAttribute="height" secondItem="kON-8k-vtV" secondAttribute="height" multiplier="0.223881" id="leg-uI-ef1"/>
                 <constraint firstItem="X69-uD-USO" firstAttribute="height" secondItem="myP-Mh-fDn" secondAttribute="height" id="mRr-Yk-y9P"/>
                 <constraint firstAttribute="bottom" secondItem="epX-eh-uqd" secondAttribute="bottom" id="njL-9E-4RK"/>
                 <constraint firstItem="I6c-Dk-kl5" firstAttribute="top" secondItem="myP-Mh-fDn" secondAttribute="top" id="ou2-O9-HEp"/>
@@ -358,7 +359,6 @@
                 <constraint firstItem="MCB-7F-dNd" firstAttribute="height" secondItem="rP7-7a-des" secondAttribute="height" id="uRB-KO-ZUk"/>
                 <constraint firstItem="X69-uD-USO" firstAttribute="top" secondItem="epX-eh-uqd" secondAttribute="top" id="uWl-bs-92G"/>
                 <constraint firstItem="0yf-Ey-fhO" firstAttribute="leading" secondItem="X69-uD-USO" secondAttribute="leading" id="up3-WG-xn3"/>
-                <constraint firstItem="JUl-T5-Lgg" firstAttribute="height" secondItem="KbB-Q5-JYD" secondAttribute="height" multiplier="0.148515" id="upj-Dd-Ltq"/>
                 <constraint firstItem="92Z-QS-QCN" firstAttribute="leading" secondItem="dOA-cy-aGo" secondAttribute="leading" id="v6s-O1-2Hv"/>
                 <constraint firstItem="MCB-7F-dNd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="3" id="v8j-uv-siq"/>
                 <constraint firstItem="kON-8k-vtV" firstAttribute="bottom" secondItem="Yr3-T8-7HB" secondAttribute="bottom" id="vMW-zj-MNc"/>
